--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       })
       .catch(error => {
         successMsg.textContent = "❌ Something went wrong. Please try again later.";
+        console.error(error);
       });
     });
   </script>
