--- a/index.html
+++ b/index.html
@@ -1,49 +1,157 @@
 <!DOCTYPE html>
-<html>
+<html lang="hy">
 <head>
-  <title>RSVP</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Արթուր & Մերի Հարսանիք</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: url('lavender.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: black;
+      text-align: center;
+      padding: 20px;
+    }
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      background: rgba(255, 255, 255, 0.85);
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    }
+    img.photo {
+      max-width: 100%;
+      border-radius: 15px;
+      margin-bottom: 10px;
+    }
+    h1 {
+      font-family: 'Georgia', serif;
+      font-size: 18pt;
+      margin: 10px 0;
+    }
+    h2 {
+      font-size: 20pt;
+      margin: 20px 0 10px;
+    }
+    .form-section {
+      text-align: left;
+      margin-top: 20px;
+    }
+    .form-section label {
+      display: block;
+      margin: 10px 0 5px;
+    }
+    input[type="text"], select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    .radio-group {
+      margin-top: 10px;
+    }
+    .radio-group label {
+      display: block;
+      margin: 5px 0;
+    }
+    button {
+      background-color: #6a5acd;
+      color: white;
+      border: none;
+      padding: 12px 25px;
+      border-radius: 10px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    .music-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      font-size: 24px;
+      cursor: pointer;
+      color: #000;
+    }
+    .thank-you {
+      display: none;
+      font-weight: bold;
+      font-size: 18px;
+      color: #4B0082;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
+  <div class="music-toggle" onclick="toggleMusic()">🔊</div>
+  <audio id="bg-music" loop>
+    <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mp3">
+  </audio>
+  <div class="container">
+    <img src="engageArturMeri.jpg" alt="Arthur and Meri" class="photo" />
+    <h1>Արթուր & Մերի</h1>
+    <h2>ՍԻՐԵԼԻ ՀՅՈՒՐԵՐ</h2>
+    <p>Հրավիրում ենք Ձեզ ներկա գտնվելու մեր հարսանյաց արարողությանը։<br />
+    Ձեր ներկայությունը մեծ ուրախություն և պատիվ կլինի մեզ համար։</p>
+    <h1 style="font-family: 'Georgia'; font-size: 18pt;">26 ՀՈԿՏԵՄԲԵՐ 2025</h1>
+    <p>Խնդրում ենք հաստատել Ձեր ներկայություն մինչև Հոկտեմբերի 15:</p>
 
-  <!-- Your HTML form here -->
-  <form id="rsvp-form">
-    <!-- fields -->
-  </form>
+    <form id="rsvp-form">
+      <div class="form-section">
+        <label>Նշեք Ձեր անուն ազգանունը։</label>
+        <input type="text" name="name" required />
 
-  <!-- ✅ JavaScript goes here -->
+        <label>Նշեք մասնակից անձանց թվաքանակը՝</label>
+        <select name="guests" required>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+        </select>
+
+        <label>Կկարողանա՞ք ներկա գտնվել միջոցառմանը։</label>
+        <div class="radio-group">
+          <label><input type="radio" name="attendance" value="Այո, սիրով կգամ" required /> Այո, սիրով կգամ</label>
+          <label><input type="radio" name="attendance" value="Ցավոք, չեմ կարողանա" required /> Ցավոք, չեմ կարողանա</label>
+        </div>
+
+        <label>Ու՞մ կողմից եք հրավիրված։</label>
+        <div class="radio-group">
+          <label><input type="radio" name="invited_by" value="Արթուր" required /> Արթուր</label>
+          <label><input type="radio" name="invited_by" value="Մերի" required /> Մերի</label>
+        </div>
+      </div>
+      <button type="submit">Ուղարկել</button>
+      <div class="thank-you">Շնորհակալություն, Ձեր պատասխանն ընդունված է։</div>
+    </form>
+  </div>
+
   <script>
     const form = document.getElementById('rsvp-form');
-    const successMsg = document.getElementById('success-msg');
-
     form.addEventListener('submit', function(e) {
       e.preventDefault();
 
-      fetch('https://script.google.com/macros/s/AKfycbzsB99hnc52fWhJ-zCtVUdGkIQvAPrW8bXEG6Rnm1GnSwoVn1eBb5RTGL2f1Vbmc9UjXg/exec', {
-        method: 'POST',
-        body: JSON.stringify({
-          name: form.name.value,
-          attendance: form.attendance.value
-        }),
-        headers: {
-          "Content-Type": "application/json"
-        }
-      })
-      .then(response => response.json())
-      .then(data => {
-        if (data.result === "Success") {
-          successMsg.textContent = "✅ Thank you! Your RSVP has been received.";
-          form.reset();
-        } else {
-          successMsg.textContent = "❌ Error: " + data.message;
-          console.error("Script error:", data.message);
-        }
-      })
-      .catch(error => {
-        successMsg.textContent = "❌ Network error. Please try again.";
-        console.error(error);
-      });
-    });
-  </script>
+      const data = new FormData(form);
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbzsB99hnc52fWhJ-zCtVUdGkIQvAPrW8bXEG6Rnm1GnSwoVn1eBb5RTGL2f1Vbmc9UjXg/exec'; // Replace with your Google Apps Script URL
 
+      fetch(scriptURL, { method: 'POST', body: data })
+        .then(response => {
+          form.reset();
+          document.querySelector('.thank-you').style.display = 'block';
+        })
+        .catch(error => console.error('Error!', error.message));
+    });
+
+    function toggleMusic() {
+      const music = document.getElementById('bg-music');
+      if (music.paused) {
+        music.play();
+      } else {
+        music.pause();
+      }
+    }
+  </script>
 </body>
 </html>
