--- a/index.html
+++ b/index.html
@@ -1,157 +1,171 @@
 <!DOCTYPE html>
 <html lang="hy">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Արթուր & Մերի Հարսանիք</title>
+  <meta charset="UTF-8">
+  <title>Արթուր & Մերի Հարսանյաց Հրավեր</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: url('lavender.jpg') no-repeat center center fixed;
+      font-family: "Segoe UI", sans-serif;
+      background-image: url('lavender.jpg');
       background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       color: black;
       text-align: center;
-      padding: 20px;
     }
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      background: rgba(255, 255, 255, 0.85);
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    .photo-container {
+      position: relative;
+      margin-top: 30px;
     }
-    img.photo {
-      max-width: 100%;
-      border-radius: 15px;
-      margin-bottom: 10px;
+    .photo-container img {
+      width: 300px;
+      border-radius: 10px;
     }
-    h1 {
+    .photo-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       font-family: 'Georgia', serif;
       font-size: 18pt;
-      margin: 10px 0;
+      color: black;
+      background: rgba(255, 255, 255, 0.5);
+      padding: 5px 15px;
+      border-radius: 5px;
     }
-    h2 {
-      font-size: 20pt;
-      margin: 20px 0 10px;
-    }
-    .form-section {
-      text-align: left;
-      margin-top: 20px;
-    }
-    .form-section label {
-      display: block;
-      margin: 10px 0 5px;
+    .section {
+      margin: 20px auto;
+      max-width: 500px;
+      background-color: rgba(255, 255, 255, 0.7);
+      padding: 20px;
+      border-radius: 15px;
     }
     input[type="text"], select {
       width: 100%;
       padding: 10px;
-      border-radius: 8px;
+      margin: 5px 0 15px 0;
+      border-radius: 5px;
       border: 1px solid #ccc;
     }
-    .radio-group {
-      margin-top: 10px;
-    }
-    .radio-group label {
-      display: block;
-      margin: 5px 0;
-    }
     button {
-      background-color: #6a5acd;
+      background-color: #5e4b8b;
       color: white;
+      padding: 10px 25px;
       border: none;
-      padding: 12px 25px;
-      border-radius: 10px;
-      font-size: 16px;
+      border-radius: 5px;
       cursor: pointer;
-      margin-top: 20px;
+      font-weight: bold;
     }
-    .music-toggle {
+    button:hover {
+      background-color: #4b3a70;
+    }
+    .music-icon {
       position: fixed;
       top: 20px;
       right: 20px;
-      font-size: 24px;
       cursor: pointer;
-      color: #000;
-    }
-    .thank-you {
-      display: none;
-      font-weight: bold;
-      font-size: 18px;
-      color: #4B0082;
-      margin-top: 20px;
+      font-size: 28px;
+      background: rgba(255,255,255,0.6);
+      padding: 10px;
+      border-radius: 50%;
     }
   </style>
 </head>
 <body>
-  <div class="music-toggle" onclick="toggleMusic()">🔊</div>
-  <audio id="bg-music" loop>
-    <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mp3">
-  </audio>
-  <div class="container">
-    <img src="engageArturMeri.jpg" alt="Arthur and Meri" class="photo" />
-    <h1>Արթուր & Մերի</h1>
-    <h2>ՍԻՐԵԼԻ ՀՅՈՒՐԵՐ</h2>
-    <p>Հրավիրում ենք Ձեզ ներկա գտնվելու մեր հարսանյաց արարողությանը։<br />
-    Ձեր ներկայությունը մեծ ուրախություն և պատիվ կլինի մեզ համար։</p>
-    <h1 style="font-family: 'Georgia'; font-size: 18pt;">26 ՀՈԿՏԵՄԲԵՐ 2025</h1>
-    <p>Խնդրում ենք հաստատել Ձեր ներկայություն մինչև Հոկտեմբերի 15:</p>
 
-    <form id="rsvp-form">
-      <div class="form-section">
-        <label>Նշեք Ձեր անուն ազգանունը։</label>
-        <input type="text" name="name" required />
+<!-- Music Player & Toggle -->
+<audio id="bg-music" loop>
+  <source src="music.mp3" type="audio/mpeg">
+  Ձեր զննարկիչը չի աջակցում երաժշտությանը։
+</audio>
+<div class="music-icon" onclick="toggleMusic()">🔊</div>
 
-        <label>Նշեք մասնակից անձանց թվաքանակը՝</label>
-        <select name="guests" required>
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-        </select>
+<!-- Couple's Photo with Names -->
+<div class="photo-container">
+  <img src="engageArturMeri.jpg" alt="Arthur and Mary">
+  <div class="photo-text">Արթուր & Մերի</div>
+</div>
 
-        <label>Կկարողանա՞ք ներկա գտնվել միջոցառմանը։</label>
-        <div class="radio-group">
-          <label><input type="radio" name="attendance" value="Այո, սիրով կգամ" required /> Այո, սիրով կգամ</label>
-          <label><input type="radio" name="attendance" value="Ցավոք, չեմ կարողանա" required /> Ցավոք, չեմ կարողանա</label>
-        </div>
+<!-- Invitation Text -->
+<div class="section">
+  <h2>ՍԻՐԵԼԻ ՀՅՈՒՐԵՐ</h2>
+  <p>Հրավիրվում եք ներկա գտնվելու մեր հարսանյաց արարողությանը։<br>
+  Ձեր ներկայությունը մեծ ուրախություն և պատիվ կլինի մեզ համար։</p>
 
-        <label>Ու՞մ կողմից եք հրավիրված։</label>
-        <div class="radio-group">
-          <label><input type="radio" name="invited_by" value="Արթուր" required /> Արթուր</label>
-          <label><input type="radio" name="invited_by" value="Մերի" required /> Մերի</label>
-        </div>
-      </div>
-      <button type="submit">Ուղարկել</button>
-      <div class="thank-you">Շնորհակալություն, Ձեր պատասխանն ընդունված է։</div>
-    </form>
-  </div>
+  <h3 style="font-family: 'Georgia', serif; font-size: 18pt;">26 ՀՈԿՏԵՄԲԵՐ 2025</h3>
 
-  <script>
-    const form = document.getElementById('rsvp-form');
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
+  <p>Խնդրում ենք հաստատել Ձեր ներկայությունը մինչև Հոկտեմբերի 15:</p>
 
-      const data = new FormData(form);
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbzsB99hnc52fWhJ-zCtVUdGkIQvAPrW8bXEG6Rnm1GnSwoVn1eBb5RTGL2f1Vbmc9UjXg/exec'; // Replace with your Google Apps Script URL
+  <!-- RSVP Form -->
+  <form id="rsvp-form">
+    <label>Նշեք Ձեր անուն ազգանունը։</label><br />
+    <input type="text" name="name" required /><br />
 
-      fetch(scriptURL, { method: 'POST', body: data })
-        .then(response => {
-          form.reset();
-          document.querySelector('.thank-you').style.display = 'block';
-        })
-        .catch(error => console.error('Error!', error.message));
-    });
+    <label>Նշեք մասնակից անձանց թվաքանակը՝</label><br />
+    <select name="guests" required>
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+    </select><br />
 
-    function toggleMusic() {
-      const music = document.getElementById('bg-music');
-      if (music.paused) {
-        music.play();
+    <label>Կկարողանա՞ք ներկա գտնվել միջոցառմանը։</label><br />
+    <input type="radio" name="attendance" value="Այո, սիրով կգամ" required /> Այո, սիրով կգամ<br />
+    <input type="radio" name="attendance" value="Ցավոք, չեմ կարողանա" required /> Ցավոք, չեմ կարողանա<br /><br />
+
+    <label>Ու՞մ կողմից եք հրավիրված։</label><br />
+    <input type="radio" name="invited_by" value="Արթուր" required /> Արթուր<br />
+    <input type="radio" name="invited_by" value="Մերի" required /> Մերի<br /><br />
+
+    <button type="submit">Ուղարկել</button>
+  </form>
+
+  <p id="rsvp-response" style="display:none; font-weight:bold; margin-top: 20px;">
+    Շնորհակալություն, Ձեր պատասխանն ընդունված է։
+  </p>
+</div>
+
+<!-- Scripts -->
+<script>
+  // Google Apps Script URL
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbxehKVT1CyI3zoInUJWl-hLFpgd9jT0vtNkAb1bbdNE/dev';
+  const form = document.getElementById('rsvp-form');
+  const responseMsg = document.getElementById('rsvp-response');
+
+  form.addEventListener('submit', e => {
+    e.preventDefault();
+    const formData = new FormData(form);
+    fetch(scriptURL, {
+      method: 'POST',
+      body: formData
+    })
+    .then(response => {
+      if (response.ok) {
+        form.reset();
+        responseMsg.style.display = 'block';
       } else {
-        music.pause();
+        alert("Սխալ է տեղի ունեցել։");
       }
+    })
+    .catch(error => {
+      console.error('Error!', error.message);
+      alert("Չհաջողվեց ուղարկել պատասխանը։");
+    });
+  });
+
+  // Music Toggle
+  const music = document.getElementById('bg-music');
+  let isPlaying = false;
+  function toggleMusic() {
+    if (isPlaying) {
+      music.pause();
+    } else {
+      music.play();
     }
-  </script>
+    isPlaying = !isPlaying;
+  }
+</script>
+
 </body>
 </html>
